--- a/about.html
+++ b/about.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-<h1>About Us</h1><p>This is the about page.</p>
-=======
-<html><head><title>about.html</title></head><body><h1>about.html</h1></body></html>
->>>>>>> 3cb7693e1082c19e7e23aca118488891d1f99ab9
+<h1>About Us</h1><p>We're passionate about 3D printing and making ideas real.</p>
