--- a/index.html
+++ b/index.html
@@ -1,27 +1,63 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PrintVision – 3D Printing</title>
+  <title>PrintVision</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to PrintVision</h1>
+    <img src="assets/images/logo.png" alt="PrintVision Logo" />
     <nav>
-      <a href="about.html">About Us</a> |
-      <a href="products/index.html">Products</a> |
+      <a href="about.html">About Us</a>
+      <a href="products/index.html">Products</a>
       <a href="custom-order.html">Custom Order</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
     <section>
+      <h1>Welcome to PrintVision</h1>
+      <p>From idea to reality — where concepts take form.</p>
+    </section>
+    <section>
+      <h2>Featured Products</h2>
+      <div>Coming soon...</div>
+    </section>
+    <section>
+      <h2>Hot Products</h2>
+      <div>Coming soon...</div>
+    </section>
+    <section>
+      <h2>Sale Products</h2>
+      <div>Coming soon...</div>
+    </section>
+    <section>
+      <h2>Custom Orders</h2>
+      <p>Let us help bring your vision to life. <a href="custom-order.html">Click here</a></p>
+    </section>
+    <section>
       <h2>Our Philosophy</h2>
-      <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
-      <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style.</p>
-      <p>Let’s build something cool together.</p>
+      <p>Welcome to PrintVision — your creative partner in custom 3D printing.<br>
+      We’re here to turn your ideas into physical reality with precision, care, and a touch of style.<br>
+      Let’s build something cool together.</p>
+    </section>
+    <section>
+      <h2>Preview Some Products</h2>
+      <img src="assets/images/p1.jpg" height="150" />
+      <img src="assets/images/p2.jpg" height="150" />
+      <img src="assets/images/p3.jpg" height="150" />
+      <img src="assets/images/p4.jpg" height="150" />
+      <img src="assets/images/p5.jpg" height="150" />
+      <img src="assets/images/p6.jpg" height="150" />
     </section>
   </main>
+  <footer>
+    <a href="https://wa.me/">WhatsApp</a> |
+    <a href="https://instagram.com/">Instagram</a> |
+    <a href="mailto:your@email.com">Email</a>
+  </footer>
 </body>
 </html>
