--- a/custom-order.html
+++ b/custom-order.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-<h1>Custom Order</h1><p>Custom order form coming soon.</p>
-=======
-<html><head><title>custom-order.html</title></head><body><h1>custom-order.html</h1></body></html>
->>>>>>> 3cb7693e1082c19e7e23aca118488891d1f99ab9
+<h1>Custom Order</h1><p>Tell us what you want printed. Contact us to start!</p>
